Thu Apr 20 12:53:12 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* Added some memory leak checking in the test suite driver.

Thu Apr 20 12:06:18 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Stopped SleepyDatabase aborting nastily when an attempt to
	  open in a non existent directory is performed.

Wed Apr 19 18:45:21 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* parameter checks when opening databases now throw
	  OmInvalidArgumentError exceptions, rather than just being Asserts.

Wed Apr 19 18:10:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Changed PostList::get_position_list() to be non-const, since it
	  modifies the PostList in many implementations.

	* Implemented SleepyPositionList.

Wed Apr 19 16:47:49 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added a PositionList base class, and methods to return position
	  lists from postlists.  No actual PositionLists yet implemented.

	* Fixed a resource (memory and file descriptor) leak in Muscat36
	  backends.

Tue Apr 18 16:42:03 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Made OmDocumentContents contain OmDatas and OmKeys rather than
	  strings.  Added constructors to OmData and OmKey.

Tue Apr 18 15:43:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>

	* StatsGatherer now knows about its associated StatsSource objects.

	* StatsGatherer is now responsible for calling
	  StatsSource::contrib_my_stats() on all its children, instead
	  of LocalMatch::prepare_match().

Mon Apr 17 17:48:48 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Implemented sleepycat termlists.

Fri Apr 14 17:22:04 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Added quickstart guide to documentation.

	* Declare this to be Version 0.1.2

Thu Apr 13 11:05:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Document data storage implementation done.  Sleepydatabase now