@@ -106,6 +106,8 @@ bool test_absentterm1();
 bool test_absentterm2();
 // test behaviour when creating a query from an empty vector
 bool test_emptyquerypart1();
+// test that a multidb query returns correct docids
+bool test_multidb3();
 
 test_desc tests[] = {
     {"trivial",            test_trivial},
@@ -145,6 +147,7 @@ test_desc tests[] = {
     {"absentterm1",	   test_absentterm1},
     {"absentterm2",	   test_absentterm2},
     {"emptyquerypart1",    test_emptyquerypart1},
+    {"multidb3",           test_multidb3},
     {0, 0}
 };
 
@@ -1612,4 +1615,58 @@ bool test_emptyquerypart1()
     OmQuery query(OM_MOP_OR, emptyterms.begin(), emptyterms.end());
 
     return true;
+}
+
+bool test_multidb3()
+{
+    bool success = true;
+    OmDatabaseGroup mydb;
+    vector<string> dbargs;
+    dbargs.push_back(datadir + "/apitest_simpledata.txt");
+    mydb.add_database("inmemory", dbargs);
+    dbargs[0] = datadir + "/apitest_simpledata2.txt";
+    mydb.add_database("inmemory", dbargs);
+    OmEnquire enquire(mydb);
+
+    // make a query
+    OmQuery myquery(OM_MOP_OR,
+		    OmQuery("inmemory"),
+		    OmQuery("word"));
+    myquery.set_bool(true);
+    enquire.set_query(myquery);
+
+    // retrieve the top ten results
+    OmMSet mymset = enquire.get_mset(0, 10);
+
+    vector<om_docid> expected_docs;
+    expected_docs.push_back(2);
+    expected_docs.push_back(3);
+    expected_docs.push_back(7);
+    
+    if (mymset.items.size() != expected_docs.size()) {
+	if (verbose) {
+	    cout << "Match set is of wrong size: was " <<
+		    mymset.items.size() << " - expected " <<
+		    expected_docs.size() << endl;
+	}
+	success = false;
+    } else {
+	vector<om_docid>::const_iterator i;
+	vector<OmMSetItem>::const_iterator j;
+	for (i = expected_docs.begin(), j = mymset.items.begin();
+	     i != expected_docs.end() && j != mymset.items.end();
+	     i++, j++) {
+	    if (*i != j->did) {
+		success = false;
+		if (verbose) {
+		    cout << "Match set didn't contain expected result:" << endl;
+		    cout << "Found docid " << j->did << " expected " << *i <<endl;
+		}
+	    }
+	}
+    }
+    if (!success && verbose) {
+	cout << "Full mset was: " << mymset << endl;
+    }
+    return success;
 }
